@@ -1,3 +1,9 @@
+2007-02-01  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* ijbridge.tcl: Added some bot commands for access from
+	IRC. Can ask the bridge for jabber user names. Fixed receipt of
+	presence information.
+
 2007-01-31  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* ijbridge.tcl: Added some statistics recording.
